brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__extended_test__parse_extended_test_backslash_continuation.snap
---
source: brush-parser/src/parser/tests/extended_test.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ -n ${x} && $((1+2)) \\\n\t-ge 3 ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ExtendedTest(ExtendedTestExprCommand(
                expr: And(UnaryTest(StringHasNonZeroLength, Word(
                  value: "${x}",
                  loc: "[location]",
                )), BinaryTest(ArithmeticGreaterThanOrEqualTo, Word(
                  value: "$((1+2))",
                  loc: "[location]",
                ), Word(
                  value: "3",
                  loc: "[location]",
                ))),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
